--- a/Youtube as background/style.css
+++ b/Youtube as background/style.css
@@ -1,1 +1,31 @@
 
+.home-banner .slide .video-slide {
+  background-color: #000; }
+
+.home-banner.loading .video-background {
+  opacity: 0; }
+
+.video-background {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right:0;
+  margin:0 auto;
+  padding-top: 56.25%;
+  width: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-transition: 2s opacity ease;
+  transition: 2s opacity ease;
+  opacity: 1; }
+
+.video-foreground,
+.video-background iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 550px;
+  margin-top:100px;
+  pointer-events: none; }
